--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "Peter Cheng",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "ejs": "^2.6.1",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "mongoose": "^5.5.6"
   }
 }
