--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "Peter Cheng",
   "license": "ISC",
   "dependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
     "body-parser": "^1.19.0",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
