--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "99 cats api using Express.js",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha --timeout 10000",
     "start": "nodemon server.js"
   },
   "author": "Peter Cheng",
@@ -15,6 +15,12 @@
     "body-parser": "^1.19.0",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
-    "mongoose": "^5.5.6"
+    "mongoose": "^5.5.6",
+    "morgan": "^1.9.1"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
+    "mocha": "^6.1.4"
   }
 }
