--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "mocha --timeout 10000 --exit",
-    "start": "nodemon server.js"
+    "start": "set NODE_ENV=dev&& nodemon server.js"
   },
   "author": "Peter Cheng",
   "license": "ISC",
